# rusty_circuit

./: Cargo.toml  LICENSE  README.md
src/: equation.rs  lib.rs  solver.rs
src/elements/: capacitor.rs  current_source.rs  ground.rs  mod.rs  resistor.rs  voltage_source.rs  wire.rs
src/solver/: equation.rs  mod.rs  solve.rs  stamp_static.rs  system.rs  test.rs  test_dynamic_circuits.rs  test_static_circuits.rs  tests.rs
